# JellyBaMM

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  1D_lumped_thermal.py  Hosseinzadeh.py  LICENSE  README.md  RK_example.py  SPMe.py  animate_saved_data.py  animation_example.py  cc_im.npz  chargeograms.py  compare-dae-solver-old.py  compare-dae-solver.py  config.txt  current_density.mat  dfn_electrode_height_input.py  ecm.vtp  ecm_casadi.prof  ecm_slow_eval.prof  environment.yml  inspect_saved_data.py  load_input.py  make_all_stats_figs.py  make_all_videos.py  mkdocs.yml  neg_particle_conc.mat  paper_figures.py  paper_figures_46800.py  pnm_pybamm_couple.py  pnm_pybamm_couple_capacity.py  pnm_pybamm_couple_heat.py  pnm_pybamm_couple_rob.py  pnm_pybamm_couple_tomo.py  pnm_transient_heat.py  polyfit.py  pos_particle_conc.mat  pybamm_ecm.py  (+34 more)
.trunk/: trunk.yaml
data/: 20um_no15_disentropyentropy.csv  Li1,05_entropy.csv  Li1,10_entropy.csv  Li1,15_entropy.csv
docs/: about.md  contributing.md  index.md  install.md  reference.md  requirements.txt
ecm/: __battery__.py  __definitions__.py  __funcs__.py  __init__.py  __liionsolve__.py  __postprocess__.py  __segment_jellyroll__.py  __solve__.py  __topology__.py  __utilities__.py
ecm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ecm_backup/: __funcs__.py
input/: Li1,20_entropy.csv  MJ141-mid-top.pnm  MJ141-mid-top_m_cc_ecm.pnm
jellybamm/: __battery__.py  __definitions__.py  __funcs__.py  __init__.py  __liionsolve__.py  __postprocess__.py  __segment_jellyroll__.py  __topology__.py  __utilities__.py
jellysim/: __coupledSim__.py  __pnmRunner__.py  __spmRunner__.py  utils.py
journal/: 0000.sol  0001.sol  0002.sol
journal_tomo_1amp/: 0001.sol  0002.sol  0003.sol  0004.sol  0005.sol  0006.sol  0007.sol  0008.sol  0009.sol  0010.sol  0011.sol  0012.sol  0013.sol  0014.sol  0015.sol  0016.sol  0017.sol  0018.sol  current_density.mat  neg_particle_conc.mat  pos_particle_conc.mat
journal_tomo_2amp/: 0001.sol  0002.sol  0003.sol  0004.sol  0005.sol  (+22 more)
(+367 files in other folders)
